[gd_scene load_steps=10 format=3 uid="uid://dpb6hjihgeumq"]

[ext_resource type="Theme" uid="uid://c6jbdk3trmuen" path="res://resources/theme/microsoftClassic.tres" id="1_jyo1n"]
[ext_resource type="Script" uid="uid://b1cixk6a7m176" path="res://scripts/settings.gd" id="2_25bb8"]
[ext_resource type="Texture2D" uid="uid://bhsxoqfcknig8" path="res://assets/UI/music.png" id="2_ibeei"]
[ext_resource type="Texture2D" uid="uid://bl4ma00uwtnb3" path="res://assets/UI/sound.png" id="3_25bb8"]
[ext_resource type="Texture2D" uid="uid://brdmflj83x6pp" path="res://assets/UI/fullScreen.png" id="4_hxa2i"]
[ext_resource type="Texture2D" uid="uid://c61s0gox3h37l" path="res://assets/UI/quit.png" id="5_6hnnl"]

[sub_resource type="Gradient" id="Gradient_ibeei"]
offsets = PackedFloat32Array(0.380645)
colors = PackedColorArray(0.0383972, 0.0383972, 0.0383971, 0.270588)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ibeei"]
gradient = SubResource("Gradient_ibeei")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hxa2i"]
texture = SubResource("GradientTexture1D_ibeei")

[node name="Settings" type="Control" groups=["Settings"]]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jyo1n")
script = ExtResource("2_25bb8")

[node name="blur" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hxa2i")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -116.0
offset_right = 128.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -192.0
offset_right = 184.0
offset_bottom = -40.0
grow_vertical = 0

[node name="musicMute" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Music"
icon = ExtResource("2_ibeei")

[node name="soundMute" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Sound"
icon = ExtResource("3_25bb8")

[node name="fullScreen" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Full Screen"
icon = ExtResource("4_hxa2i")

[node name="quit" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Quit"
icon = ExtResource("5_6hnnl")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 23.0
text = "Settings"

[node name="closeButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 184.0
offset_right = 208.0
offset_bottom = 32.0
focus_mode = 0
mouse_default_cursor_shape = 2
flat = true

[connection signal="pressed" from="Panel/HBoxContainer/musicMute" to="." method="_on_music_mute_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/soundMute" to="." method="_on_sound_mute_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/fullScreen" to="." method="_on_full_screen_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel/closeButton" to="." method="_on_close_button_pressed"]
